src/main/java/org/beanstalk4j/json/json.jj
options {
    STATIC = false;
    SUPPORT_CLASS_VISIBILITY_PUBLIC=false;
}

PARSER_BEGIN(JSON)

package org.beanstalk4j.json;

import java.io.StringReader;
import java.io.Reader;

public class JSON {

    public JSON(String s) { 
        this((Reader)(new StringReader(s))); 
    }
       
    public static void main(String args[]) {
        try
        {
              JSON parser = new JSON(System.in);
              parser.parse();
        }
        catch(Exception e)
        {
              e.printStackTrace();
        }
    }
}

PARSER_END(JSON)

SKIP :
{
      " " 
    | "\t" 
    | "\r" 
    | "\n"
}

TOKEN :
{
      <INTEGER: ["1"-"9"] (["0"-"9"])* >
    | <TRUE: "true">
    | <FALSE: "false">
    | <NULL: "null">
    | <STRING: "\"" (~["\"","\\","\r","\n","\f","\t"])* "\"">
}

void value() :
{
}
{
      <TRUE> 
    | <FALSE> 
    | <NULL> 
    | <INTEGER>
    | <STRING>
}


void parse() :
{
}
{
    object() <EOF>
}

void object() :
{
}
{
    "{" (member())? "}" 
}

void member() :
{
}
{
    pair() ("," pair())*
}

void pair() :
{
}
{
    <STRING> ":" value()
    
}
